[Update] Enable FCM Follow,Scrap,Post Article
